Fixed z-index

--- a/src/components/PostListRow/PostListRow.scss
+++ b/src/components/PostListRow/PostListRow.scss
@@ -182,7 +182,7 @@
   margin: -6px -4px -6px -4px;
   background-color: rgba(255, 255, 255, 1);
   padding: 17px 20px;
-  z-index: 30;
+  z-index: 10;
   border-radius: 5px;
   box-shadow: 0 4px 15px rgba(35, 65, 91, .3);
   border: 1px solid rgba(0, 118, 223, 0.5);
